--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    
+}
 .parent{
 
     display: flex;
@@ -26,7 +31,7 @@
     .container{
         width: 550px;
     }
-      td{
+    td{
         width: calc(100vw/6)!important;
         height: calc(100vh/6)!important;
     }
